# UnoAI

./: FinalAI.py  Readme.md  qlearning.py
backend/: CMakeLists.txt  GameState.h  main.cpp  package.json  server.js  string_utils.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  HomePage.jsx
frontend/src/components/: UnoGame.jsx  gameApi.js  gameApi.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  alert-dialog.jsx
frontend/src/components/uno/: CardComponent.jsx  ColorSelector.jsx  ErrorToast.jsx  GameOverModal.jsx  GameStats.jsx
frontend/src/constants/: gameConstants.js
frontend/src/css/: uno.css
frontend/src/utils/: gameUtils.js  gameUtils.jsx
models/: Q-learningAgentTraining.py
